--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^5.5.5",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.1",
+    "nodemailer": "^6.2.1",
     "rxjs": "6.0.0",
     "zone.js": "^0.8.26"
   },
